--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=mg-mail-service
+spring.data.mongodb.uri=mongodb://localhost:27017/mg-mail-service
+spring.profiles.active=dev
